k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso-frontend-dave-lee
spec:
  type: ClusterIP
  selector:
    component: sso
    student: dave-lee
  ports:
    - port: 3000
      targetPort: 3000
