k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sso-frontend-dave-lee
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    # SA center
    - host: sso-frontend-dave-lee.assignment.eks004.en.internal
    # HZ center
    # - host: sso-frontend-dave-lee.assignment.eks006.en.internal
      http:
        paths:
          - path: /
            backend:
              serviceName: sso-frontend-dave-lee
              servicePort: 3000
